--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestión de ideas</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/idea.png" type="image/png" />
   </head>
   <body>
     <h1>IDEAS</h1>
