new styles implemented

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>IDEAS</h1>
-    <div class="input">
+    <div class="add-idea-container">
       <input id="new-idea-input" type="text" placeholder="Introduce la idea" />
       <button id="add-idea-button">Añadir idea</button>
     </div>
-    <ul id="idea-list"></ul>
+    <div id="idea-list"></div>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
