--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <input id="new-idea-input" type="text" placeholder="Introduce la idea" />
       <button id="add-idea-button">Añadir idea</button>
     </div>
-    <div id="idea-list"></div>
+    <div id="ideas-container"></div>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
